// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tokenizer should not lose data when pausing 1`] = `
[
  [
    "ontextentity",
    38,
  ],
  [
    "ontext",
    5,
    12,
  ],
  [
    "onend",
  ],
]
`;

exports[`Tokenizer should support self-closing special tags for self-closing script tag 1`] = `
[
  [
    "onopentagname",
    1,
    7,
  ],
  [
    "onselfclosingtag",
    9,
  ],
  [
    "onopentagname",
    11,
    14,
  ],
  [
    "onopentagend",
    14,
  ],
  [
    "onclosetag",
    17,
    20,
  ],
  [
    "onend",
  ],
]
`;

exports[`Tokenizer should support self-closing special tags for self-closing style tag 1`] = `
[
  [
    "onopentagname",
    1,
    6,
  ],
  [
    "onselfclosingtag",
    8,
  ],
  [
    "onopentagname",
    10,
    13,
  ],
  [
    "onopentagend",
    13,
  ],
  [
    "onclosetag",
    16,
    19,
  ],
  [
    "onend",
  ],
]
`;

exports[`Tokenizer should support self-closing special tags for self-closing title tag 1`] = `
[
  [
    "onopentagname",
    1,
    6,
  ],
  [
    "onselfclosingtag",
    8,
  ],
  [
    "onopentagname",
    10,
    13,
  ],
  [
    "onopentagend",
    13,
  ],
  [
    "onclosetag",
    16,
    19,
  ],
  [
    "onend",
  ],
]
`;

exports[`Tokenizer should support standard special tags for normal script tag 1`] = `
[
  [
    "onopentagname",
    1,
    7,
  ],
  [
    "onopentagend",
    7,
  ],
  [
    "onclosetag",
    10,
    16,
  ],
  [
    "onopentagname",
    18,
    21,
  ],
  [
    "onopentagend",
    21,
  ],
  [
    "onclosetag",
    24,
    27,
  ],
  [
    "onend",
  ],
]
`;

exports[`Tokenizer should support standard special tags for normal sitle tag 1`] = `
[
  [
    "onopentagname",
    1,
    6,
  ],
  [
    "onopentagend",
    6,
  ],
  [
    "onclosetag",
    9,
    14,
  ],
  [
    "onopentagname",
    16,
    19,
  ],
  [
    "onopentagend",
    19,
  ],
  [
    "onclosetag",
    22,
    25,
  ],
  [
    "onend",
  ],
]
`;

exports[`Tokenizer should support standard special tags for normal style tag 1`] = `
[
  [
    "onopentagname",
    1,
    6,
  ],
  [
    "onopentagend",
    6,
  ],
  [
    "onclosetag",
    9,
    14,
  ],
  [
    "onopentagname",
    16,
    19,
  ],
  [
    "onopentagend",
    19,
  ],
  [
    "onclosetag",
    22,
    25,
  ],
  [
    "onend",
  ],
]
`;
